Fix styling issues on mobile

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,4 +1,13 @@
 @import "~normalize.css/normalize.css";
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
 
 body {
   background-color: #FFF;
@@ -114,5 +123,28 @@ input[type=range]::-ms-thumb {
   img {
     height: 50px;
     margin-right:10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #soundboard {
+    height: unset !important;
+    margin-left: unset !important;
+    margin-top: unset !important;
+    position: unset !important;
+    top: unset !important;
+    left: unset !important;
+    width: unset !important;
+    //width: 1vw !important;
+    //transform: translate(20%);
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+  }
+  .button {
+    width: auto;
+  }
+  .volumeslider {
+    position: fixed;
   }
 }
